# suffine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: articles.rs  indexer.rs  searcher.rs  simple.rs  wiki_indexer.rs  wiki_searcher.rs
src/: build.rs  error.rs  index.rs  lib.rs
