[package]
name = "suffine"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suffix = "1.2.0"
byteorder = "1.3.4"
tempfile = "3.1.0"

[dev-dependencies]
itertools = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
