[package]
name = "suffine"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"
description = "Suffix array construction for huge strings"
documentation = "https://github.com/mosmeh/suffine"
homepage = "https://github.com/mosmeh/suffine"
repository = "https://github.com/mosmeh/suffine"
keywords = ["search", "text", "index", "suffix"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
byteorder = "1.3.4"
itertools = "0.9.0"
suffix = "1.2.0"
tempfile = "3.1.0"
thiserror = "1.0.19"

[dev-dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.31"
bincode = "1.2.1"
memmap = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
