[package]
name = "suffine"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"
description = "Suffix array construction for huge strings"
documentation = "https://github.com/mosmeh/suffine"
homepage = "https://github.com/mosmeh/suffine"
repository = "https://github.com/mosmeh/suffine"
keywords = ["search", "text", "index", "suffix"]
readme = "README.md"
license-file = "LICENSE"

[lib]
name = "suffine"
path = "src/lib.rs"

[[bin]]
name = "suffine"
path = "src/bin/cli.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.31"
bytemuck = "1.2.0"
byteorder = "1.3.4"
clap = "2.33.1"
itertools = "0.9.0"
memmap = "0.7.0"
suffix = "1.2.0"
tempfile = "3.1.0"
thiserror = "1.0.19"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
